--- a/src/App.css
+++ b/src/App.css
@@ -72,18 +72,11 @@ h1 {
 	border-radius: 0 4px 4px 0;
 	cursor: pointer;
 	outline: none;
-	/* background: linear-gradient(
+	background: linear-gradient(
 		90deg,
 		rgba(93, 12, 255, 1) 0%,
 		rgba(155, 0, 250, 1) 100%
-	); */
-
-	background: linear-gradient(
-		90deg,
-		rgba(255, 12, 241, 1) 0%,
-		rgba(250, 0, 135, 1) 100%
 	);
-
 	color: #fff;
 	text-transform: capitalize;
 }
@@ -204,16 +197,16 @@ h1 {
 	}
 
 	.todo-input {
-		width: calc(100% - 75.32px);
+		width: calc(100% - 75.07px);
 		padding: 14px;
 	}
 
 	.todo-input.edit {
-		width: calc(100% - 75.07px);
+		/* width: calc(100% - 75.07px); */
 	}
 
 	.todo-button {
-		width: 74.32px;
+		width: 75.07px !important;
 		padding: 16px 10px;
 	}
 
