--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ h1 {
 }
 
 .todo-form {
+	display: flex;
 	margin-bottom: 25px;
 	width: 100%;
 }
@@ -65,17 +66,26 @@ h1 {
 }
 
 .todo-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	min-width: 48px;
 	width: 20%;
-	padding: 16px;
+	/* padding: 16px; */
 	border: none;
 	border-radius: 0 4px 4px 0;
 	cursor: pointer;
 	outline: none;
-	background: linear-gradient(
+	/* background: linear-gradient(
 		90deg,
 		rgba(93, 12, 255, 1) 0%,
 		rgba(155, 0, 250, 1) 100%
+	); */
+
+	background: linear-gradient(
+		90deg,
+		rgba(255, 118, 20, 1) 0%,
+		rgba(255, 84, 17, 1) 100%
 	);
 	color: #fff;
 	text-transform: capitalize;
@@ -91,7 +101,7 @@ h1 {
 		rgba(20, 159, 255, 1) 0%,
 		rgba(17, 122, 255, 1) 100%
 	);
-	padding: 16px 22px;
+	/* padding: 16px 22px; */
 }
 
 .todo-container {
@@ -181,8 +191,9 @@ h1 {
 
 	.todo-button,
 	.todo-button.edit {
-		min-width: fit-content;
-		width: fit-content;
+		width: 90px;
+		/* min-width: fit-content; */
+		/* width: fit-content; */
 	}
 }
 
@@ -207,10 +218,12 @@ h1 {
 
 	.todo-button {
 		width: 75.07px !important;
-		padding: 16px 10px;
+		/* padding: 0 !important; */
+		/* padding: 16px 10px; */
 	}
 
 	.todo-button.edit {
-		padding: 16px;
+		/* padding: 0; */
+		/* padding: 16px; */
 	}
 }
