--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,11 @@ body {
 }
 
 #root {
-	height: 100vh;
+	min-height: 100vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	padding: 3%;
 }
 
 .todo-app {
@@ -29,7 +30,6 @@ body {
 	min-height: 85vh;
 	background: #161a2b;
 	text-align: center;
-	margin: 128px auto;
 	border-radius: 10px;
 	padding: 35px 60px;
 }
